Fixing overflow-x on mobile

--- a/chance/src/styles.scss
+++ b/chance/src/styles.scss
@@ -53,6 +53,10 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  overflow:hidden;
+  }
+
 html,
 body {
   height: 100%;
